--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="about">
         <h1>ABOUT ME</h1>
     <p>Hello World
-        I'm Steffi Lazar. I'm a CSE undergraduate at Model Engineering College Thrikkakara. I look forward to learn new things and enhance my skills throughout this next 4 years.
+        I'm <mark>Steffi Lazar</mark>mark. I'm a CSE undergraduate at Model Engineering College Thrikkakara. I look forward to learn new things and enhance my skills throughout this next 4 years.
     </p>
     </div>
     <div id="education">
@@ -32,7 +32,7 @@
         <div>
                 <li><a href="https://instagram.com/steffilazar01?utm_source=qr">Instagram</a></li>
                 <li><a href="http://linkedin.com/in/steffi-lazar-b1577b291">LinkedIn</a></li>
-                <li>Mobile: 9946459738</li>
+                <li>Mobile: 9946xxxx8</li>
                 <li>Email: steffilazar01@gmail.com</li>
         </div>
         </div>
